traces/bug_287.txt
src/femlib/splitsimplex.cpp:237: error: DEAD_STORE
  The value written to &n2 (type int) is never used.
Showing all 1 steps of the trace


src/femlib/splitsimplex.cpp:237:3: Write of unused value
235.   {
236.     const int n=N;
237.     const int n2=n*n;
         ^
238.     
239.     int ntri=3*ntri2;
